# labVirt_ws

./: .gitignore  CMakeLists.txt  CubesatOut.csv  InstalaROS2  README.md  control_design.ipynb  control_requiriments.ipynb  control_requiriments.py  cubesat_dataframe.csv  cubesat_design.ipynb  cubesat_design.py  cubesat_plots  cubesat_plots.py  dynamic_simulation.py  dynamic_simulation_c172p.py  fg_conn.xml  jsbsim_utils.py  linearDinamic.py  package.xml  polesAlocation.py  pyproject.toml  rdr_design.py  rootLocus.py  teste.py  teste_dataframe.csv
.ipynb_checkpoints/: cubesat_design-checkpoint.ipynb
aircraft/cubesat/: cubesat-set.xml  cubesat.ac  cubesat.xml  mibs-set.xml
aircraft/cubesat/Dialogs/: adjust.xml  select.xml
aircraft/cubesat/Models/: cubesat.ac  cubesat.xml
aircraft/cubesat_fg/: cam.nas  cubesat.nas
aircraft/cubesat_fg/Dialogs/: status.xml
aircraft/cubesat_fg/Instruments/: panel.xml
aircraft/cubesat_fg/Models/: cubesat.ac
config/: cubesat_control.yaml
description/: example_cubesat.urdf.xacro  example_gazebo.xacro  example_include.xacro
doc/Desenvolvimento de Laboratório Virtual_ Um Ambiente para o Ensino de Modelagem e Controle de CubeSat/: bibliografia.bib  dissertacao.aux  dissertacao.lof  dissertacao.lot  dissertacao.tex  dissertacao.toc  referencias.bib
engine/: EPSS_C2.xml  README.md  epss_c2_nozzle.xml
launch/: cubesat.launch  rsp_sim.launch.py
scripts/: cubesat.xml  cubesat_chute.xml  cubesat_orbit.xml  cubesat_orbit_g_torque.xml  cubesat_orbit_phase.xml
src/: dc_motor_controller.cpp
(+29 files in other folders)
