[tool.poetry]
name = "labvirt-ws"
version = "0.1.0"
description = "Package of a Virtual Lab for control simulation of Cubesats"
authors = ["Gabriel Alves Silva <gabriel_cte@outlook.com>"]
license = "GNU"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
jsbsim = "1.2.1"
spyder-kernels = "==2.5.*"
scipy = "^1.14.0"
control = "^0.10.0"
navpy = "^1.0"
ambiance = "^1.3.1"
pandas ="^2.2.3"
jupyter = "^1.1.1"
flightgear-python = "^1.7.0"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
